<resources>
    <string name="app_name">Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <string name="action_finalizar_negociacao">Finalizar Negociação</string>
    <string name="action_marcar_anuncio_vendido">Marcar como vendido</string>

    <string name="navigation_drawer_inicio">Início</string>
    <string name="navigation_drawer_novo_anuncio">Novo anúncio</string>
    <string name="navigation_drawer_negociacoes">Negociações</string>
    <string name="navigation_drawer_lista_desejos">Lista de desejos</string>
    <string name="navigation_drawer_categorias">Categorias</string>
    <string name="navigation_drawer_perfil">Meu perfil</string>
    <string name="navigation_drawer_meus_anuncios">Meus anúncios</string>
    <string name="navigation_drawer_configuracoes">Configurações</string>
    <string name="navigation_drawer_sair">Sair</string>
    <string name="title_activity_novo_anuncio">Novo anúncio</string>
    <string name="title_activity_negociacoes">Negociações</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="title_activity_lista_desejos">Lista de desejos</string>
    <string name="title_activity_perfil">Meu perfil</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="input_novo_anuncio_titulo">O que deseja anunciar?</string>
    <string name="input_novo_anuncio_descricao">Descreva seu anúncio</string>
    <string name="input_novo_anuncio_preco">Preço</string>
    <string name="text_view_categoria_label">Categoria</string>
    <string name="spinner_categoria_selecionar">Selecione&#8230;</string>

    <string name="facebook_app_id">1782125192089064</string>
    <string name="fb_login_protocol_scheme">fb1782125192089064</string>

    <string-array name="categorias">
        <item>Culinária</item>
        <item>Educação</item>
        <item>Eletrônicos</item>
        <item>Empregos/Serviços</item>
        <item>Esportes</item>
        <item>Eletrodomésticos</item>
        <item>Imóveis</item>
        <item>Móveis/Decoração</item>
        <item>Outros</item>
        <item>Pets</item>
        <item>Utensílios</item>
        <item>Veículos</item>
        <item>Vestuário/Acessórios</item>
    </string-array>

    <string-array name="categorias_lista_desejos">
        <item>Todos</item>
        <item>Culinária</item>
        <item>Educação</item>
        <item>Eletrônicos</item>
        <item>Empregos/Serviços</item>
        <item>Esportes</item>
        <item>Eletrodomésticos</item>
        <item>Imóveis</item>
        <item>Móveis/Decoração</item>
        <item>Pets</item>
        <item>Veículos</item>
        <item>Vestuário/Acessórios</item>
    </string-array>

    <string name="text_view_adicionar_imagens">Adicionar imagens</string>
    <string name="text_view_quantidade">Quantidade</string>

    <string name="alert_sair_sem_salvar_message">Se você sair, as informações que você inseriu serão perdidas.</string>

    <string name="texto_marcar_vendido_anuncio">Ao marcar um anúncio como vendido, ele não aparecerá mais no Up. Deseja continuar?</string>
    <string name="excluir_anuncio_dialog_title">Remover anúncio</string>
    <string name="excluir_anuncio_dialog_text">Tem certeza de que deseja remover este anúncio?</string>

    <!--Ações comuns-->
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sair">Sair</string>
    <string name="enviar">Enviar</string>

    <string name="escreva_mensagem">Escreva uma mensagem&#8230;</string>
    <string name="continuar_editando">Continuar editando</string>

    <string name="erro_novo_anuncio_titulo">Seu anúncio precisa de um título.</string>
    <string name="erro_novo_anuncio_descricao">Seu anúncio precisa de uma descrição.</string>
    <string name="erro_novo_anuncio_preco">Seu anúncio precisa de um preço.</string>
    <string name="button_comprar">negociar</string>
    <string name="title_activity_anuncio">Anúncio</string>
    <string name="price">Preço</string>
    <string name="available">Quantidade</string>
    <string name="perfil_botao_salvar_edicao">Salvar edição</string>
    <string name="button_marcar_vendido">marcar como vendido</string>


    <string-array name="tabs_perfil">
        <item>Perfil</item>
        <item>Meus Anúncios</item>
    </string-array>

    <string name="title_activity_edit_perfil">Editar perfil</string>
    <string name="input_edit_nome_hint">Altere o seu nome</string>
    <string name="input_edit_logradouro_hint">Informe a sua rua</string>
    <string name="input_edit_bairro_hint">Informe o seu bairro</string>
    <string name="input_edit_complemento_hint">Informe um complemento</string>
    <string name="input_edit_numero_hint">Informe o número da sua residência</string>
    <string name="input_edit_cidade_hint">Informe a sua cidade</string>
    <string name="input_edit_estado_hint">Informe o seu estado</string>
    <string name="input_edit_telefone_hint">Informe o seu telefone</string>
    <string name="input_edit_email_hint">Altere o seu email</string>
    <string name="input_edit_senha_hint">Altere a sua senha</string>
    <string name="input_edit_confirm_senha_hint">Confirme a sua nova senha</string>
    <string name="title_activity_cadastro">Cadastre-se</string>
    <string name="dafault_user_name">Visitante</string>
    <string name="dafault_exit_confirmation">Deseja realmente Sair?</string>

    <string name="iniciada_em">Negociação iniciada em:</string>
    <string name="no_address_dialog_title">Ops... </string>
    <string name="insert_address_message">Informações de endereço não cadastradas, informá-las ajuda a aumentar
        as chances de negociações. Gostaria de adicioná-las agora?</string>

    <string name="faca_login">Apenas usuários logados podem executar essa ação, gostaria de fazer login agora?</string>
    <string name="nao_salvo">Parece que você ainda não salvou nenhum anúncio, que tal adicionar algo na sua lista de desejos agora?</string>

    <string name="insert_profile_picture_message">Parece que você não forneceu uma foto de perfil, gostaria de adicioná-la agora?</string>

    <string name="lista_desejos_action_menu">Limpar lista</string>

    <string-array name="tabs_negociacoes">
        <item>Compras</item>
        <item>Vendas</item>
    </string-array>

    <string-array name="spinner_negociacoes">
        <item>Abertas</item>
        <item>Fechadas</item>
        <item>Canceladas</item>
    </string-array>
    <string name="title_activity_maps_perfil">Map</string>

    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">-->
    <!--AIzaSyBAYvcgfcJZWCW-dhdJXxw21JnJXrY98y4-->
    <!--</string>-->

    <string name="label_no_buy">Você ainda não iniciou nenhuma negociação.</string>
    <string name="label_no_sell">Ninguém iniciou uma negociação com você, ainda.</string>

    <string name="label_no_messages">Ainda não há mensagens.</string>

    <string name="anunciado_por">Anunciado por</string>
    <string name="title_activity_perfil_publico">PerfilPublicoActivity</string>
    <string name="negociante">Negociante:</string>
    <string name="comprador">Comprador:</string>
    <string name="vendedor">Vendedor:</string>

    <string name="anuncio_cadastrado_em">Anúncio cadastrado em</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <string name="searchNotFound">Desculpe, não encontramos nenhum anúncio com esse título
        :(\n\ntente buscar com outros termos</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <string name="negociacao_finalizada_message">Essa negociação foi finalizada. \nVocê não pode enviar ou receber mensagens, mas ainda pode acessar todo o histórico.</string>

</resources>
