<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.41"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.ufc.quixada.up.Activities.EditPerfilActivity"
    tools:showIn="@layout/activity_edit_perfil"
    >

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#7D19001D"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:elevation="5dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08">

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingTop="?attr/actionBarSize"-->
        <!--android:weightSum="1"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
        <!--tools:context="br.ufc.quixada.up.Activities.EditPerfilActivity"-->
        <!--tools:showIn="@layout/activity_edit_perfil">-->



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="6"
                    android:background="@color/backgroundDarker"
                    android:elevation="0dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewIconeFoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="-30dp"
                    android:layout_weight="0.41"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="6"
                    android:text="Informações pessoais"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_nome_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_telefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_telefone_hint"
                        android:inputType="phone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/addressInfos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="6"
                    android:text="Informações de endereço"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_logradouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_logradouro_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_numero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_numero_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_complemento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_complemento_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_bairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_bairro_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_cidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_cidade_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.08"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_estado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_estado_hint"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="6"
                    android:text="Conta"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_email_hint"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_senha_hint"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp">

                    <EditText
                        android:id="@+id/edit_senha_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:focusedByDefault="false"
                        android:hint="@string/input_edit_confirm_senha_hint"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonSalvarEdicao"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/perfil_botao_salvar_edicao" />
            </LinearLayout>


    <!--</LinearLayout>-->
    </ScrollView>
</FrameLayout>
